--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:orientation="vertical"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:backgroundTint="#FFEB3B"
+    android:backgroundTintMode="add"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
 
@@ -14,5 +15,14 @@
         android:layout_height="wrap_content"
         android:text="Heloo Android！"
         android:textSize="40" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="100"
+        android:text="Test Text Massage"
+        android:textSize="50"
+        android:textStyle="bold" />
+
 
 </LinearLayout>
